<resources>
    <string name="app_name">Boring But Big Challenge</string>
    <string name="domain_name">christopherwmurphy.com</string>
    <string name="dummy_account">dummy</string>
    <string name="DATABASE_NAME">Workout Database</string>
    <string name="language">language</string>
    <string name="english">en</string>
    <string name="authority">com.christopherwmurphy.boringbutbigapp.SyncAdapter.ContentProvider</string>

    <string name="Home">Home</string>
    <string name="plans">Workout Plans</string>
    <string name="movements">Movements</string>
    <string name="history">Workout History</string>

    <string name="videoErrorMessage">There was a problem loading the videos, please try again later.</string>
    <string name="week">Week</string>
    <string name="optional">optional : </string>
    <string name="my_workout">Create Workout</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="popup_message">Please enter your max for the following exercises.  If you have entered your maxes before, these fields have been populated for you.</string>
    <string name="popup_title">Set Max Pop-up</string>
    <string name="home_popup_title">No Workout Selected</string>
    <string name="max_error_message_part_1">The max for a</string>
    <string name="max_error_message_part_2">must be greater than 0.</string>
    <string name="valid_input_number">Only numbers are allowed as input.</string>
    <string name="no_workout_msg">You have not selected a workout plan.  Please select one from the workouts.</string>
    <string name="ok">OK</string>
    <string name="workout_table_title">Today\'s Workout</string>
    <string name="complete">Complete Workout</string>
    <string name="numbers_only">Only numbers are allowed in the fields.</string>
    <string name="opt">optional</string>
    <string name="day">Day</string>
    <string name="step">Steps</string>
    <string name="lbs">lbs</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="record_workout">Record Workout</string>
    <string name="steps_heading">Steps Heading</string>
    <string name="exercise_name">Name of exercise</string>
    <string name="exercise_max">Max weight for exercise</string>
    <string name="units">units of measure</string>
    <string name="rep_scheme">number of sets and number of repetitions</string>
    <string name="perscribed_weight">amount of weight for exercise</string>
    <string name="date_of_workout">date of workout</string>
    <string name="workout_plan_name">name of workout plan</string>
</resources>
