<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="320dp"
    android:layout_height="320dp"
    android:background="#ffffff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/popup_title"
            android:gravity="center_vertical"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_message"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/maxList"
            android:descendantFocusability="beforeDescendants"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:text="@string/save"/>

            <Button
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:text="@string/cancel"/>
        </LinearLayout>
</LinearLayout>
</FrameLayout>