<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/widget_lift"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:theme="@style/BigButBoringTheme.TextView.Widget"
        android:padding="4dp"
        android:contentDescription="@string/exercise_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/widget_reps"
        android:layout_weight="1"
        android:theme="@style/BigButBoringTheme.TextView.Widget"
        android:padding="4dp"
        android:contentDescription="@string/rep_scheme"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/widget_weight"
        android:layout_weight="1"
        android:theme="@style/BigButBoringTheme.TextView.Widget"
        android:padding="4dp"
        android:contentDescription="@string/perscribed_weight"/>
</LinearLayout>