<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="320dp"
    android:layout_height="160dp"
    android:background="@drawable/popup_window_border">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_rounded_edges"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home_popup_title"
            android:gravity="center_vertical"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_workout_msg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/okay_button"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>